# factorio_ai

./: .gitignore  Cargo.toml  README.md
src/: lua_parser.rs  main.rs  recipe.rs
