[package]
name = "factorio_ai"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.2.1"
petgraph = "0.6.0"
ron = "0.6.4"
serde = "1"

[profile.release]
debug = true
